--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,8 @@
         <h2>Repository Activity</h2>
         <div id="events"></div>
     </div>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+     <script src="{{ url_for('static', filename='app.js') }}"></script>
+
 </body>
 </html>
